--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -5,8 +5,16 @@
     <string name="hello_world">Hello world!</string>
     <string name="menu_settings">Settings</string>
 
-    
     <!-- welcomeActivity -->
     <string name="welcome_logo">Discover the places around you</string>
     <string name="welcome_whats_around_button">What\'s around ?</string>
+    
+    <string name="title_activity_nearby">NearbyActivity</string>
+    
+    <string name="enable_gps">Enable GPS</string>
+    <string name="enable_gps_dialog">GPS provider not enabled. Would you like to enable it?</string>
+    
+    <string name="not_support_gps">GPS provider not supported</string>
+    <string name="not_support_network">Network provider not supported</string>
+
 </resources>
