--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -17,4 +17,10 @@
     <string name="places_fonunded">Places found near you!</string>
     <string name="title_activity_places_fragment">PlacesFragmentActivity</string>
 
+    <string name="distance_label">Distance: </string>
+    <string name="website_label">Website: </string>
+    <string name="places_near_you">Places found near you!</string>
+    <string name="refresh_description">refresh the results!</string>
+    
+    
 </resources>
